# Plate-Planner

./: .gitignore  README.md  plateplanner.py  plateplanner.spec  pyproject.toml  qt_colorbutton.py  requirements.txt  resources.qrc  stylesheet.qss
.github/workflows/: build-and-release.yml  python-app.yml
plateplanner/: __init__.py  core.py  dialogs.py  mainwindow.py  runner.py
plateplanner/plates/: plates.json
plateplanner/resources/: resources.qrc  stylesheet.qss
plateplanner/resources/icons/: plateplanner.icns
plateplanner/widgets/: colorbutton.py  legendview.py
