[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "Plate Planner"
description = "Multiwell plate planning tool"
authors = [
    {name = "Unai Montejo", email = "unaimonte@gmail.com"},
]
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "matplotlib",
    "numpy",
    "PySide6",
]
version = "1.1.0"

filterwarnings = [
    "ignore::DeprecationWarning"
]